samples/_failures_safe/1761470111_91098c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2249731.c: In function ‘main’:
./samples/SAFE/__tmp_f2249731.c:153:12: error: missing terminating " character
  153 |     printf("\nEnter level to filter by (DEBUG/INFO/WARNING/ERROR/CRITICAL):
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f2249731.c:153:5: error: expected expression at end of input
  153 |     printf("\nEnter level to filter by (DEBUG/INFO/WARNING/ERROR/CRITICAL):
      |     ^~~~~~
./samples/SAFE/__tmp_f2249731.c:153:5: error: expected declaration or statement at end of input
